removed java 21 references - 1.1 final commit